--- a/Flask/Static/style.css
+++ b/Flask/Static/style.css
@@ -51,11 +51,13 @@ ul{
 
     content: "";
     position: absolute;
-    top: 0;
+    height: 100%;
+    width:100%;
+    /* top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
-    background: url('Images/2430568.jpg') center center/cover no-repeat;
+    bottom: 0; */
+    background: url('Images/20536905.jpg') center center/cover;
     z-index: -1;
     animation: zoom 20s infinite alternate;
 }
@@ -147,7 +149,7 @@ main{
 
 @keyframes zoom {
     0%{
-        scale:1.5;
+        scale:1.4;
     }
     100%{
         scale:1;
@@ -160,26 +162,45 @@ main{
     } */
             
 #index-detail{
-    background-color: #ffffff;
-    width: 75%;
+    background-color: #afceee;
+    width: 80%;
     height:auto;
     padding: 30px;
     justify-content: center;
     align-items: center;
-    text-align: center; 
     margin: 0 auto;
     margin-top: 4%;
-    margin-bottom: 2%;
+    margin-bottom: 4%;
     border-radius: 10px;
-    border: 1px solid #e8491d;
-    opacity: 0.6;
+    /* border: 1px solid #e8491d; */
+    opacity: 0.75;
     position: relative;
     z-index: 1;
 }
 
 #index-detail h2{
     text-align: center;
-    font-size: 40px;
+    font-size: 35px;
+    color: rgba(0, 0, 0, 1);
+}
+
+#index-detail h3{
+    font-size: 20px;
+    color: rgba(0, 0, 0, 1);
+}
+
+#index-detail hr{
+    border: 1px solid #e8491d;
+}
+
+#index-detail p{
+    font-size: 20px;
+    color: rgba(0, 0, 0, 1);
+}
+
+.olist_heading{
+    font-size: 25px;
+    color: rgba(0, 0, 0, 1);
 }
 
 /* Register */
