--- a/Flask/Templates/dashboard.html
+++ b/Flask/Templates/dashboard.html
@@ -3,26 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel ="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>Dashboard</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        .dashboard-container {
             margin: 0;
-            padding: 0;
+            padding: 5%;
             display: flex;
             flex-direction: column;
-            align-items: center;
-            justify-content: center;
+            /*align-items: center;
+            justify-content: center;*/
             height: 100vh;
-        }
-        .dashboard-container {
-            width: 80%;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         .section {
             margin-bottom: 20px;
@@ -57,11 +48,9 @@
             border-radius: 5px;
             transition: background-color 0.3s ease, transform 0.3s ease;
         }
-
         .task-button:hover {
             background-color: #0056b3;
         }
-
         .task-button:active {
             transform: scale(0.98);
         }
@@ -81,13 +70,21 @@
                     </li>
                 {% endfor %}
             </ul>
-        </div>
-        <button class="task-button" onclick="window.location.href='{{ url_for('task') }}';">Task Input</button>
+            <button class="task-button" onclick="window.location.href='{{ url_for('task') }}';">Task Input</button>
         <button class="task-button" onclick="window.location.href='{{ url_for('completed_tasks') }}';">View Completed Tasks</button>
+        </div>
     </div>
     <button class="back-button" onclick="history.back()">Go Back</button>
 
     <script>
+        window.onload = function() {
+            if (!sessionStorage.getItem('reloaded')) {
+                sessionStorage.setItem('reloaded', 'yes');
+                window.location.reload();
+            } else {
+                sessionStorage.removeItem('reloaded');
+            }
+        };
         function completeTask(taskId) {
             fetch('/complete_task', {
                 method: 'POST',
