--- a/Flask/templates/completed_tasks.html
+++ b/Flask/templates/completed_tasks.html
@@ -3,26 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel ="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>Completed Tasks</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        .tasks-container {
             margin: 0;
-            padding: 0;
+            padding: 5%;
             display: flex;
             flex-direction: column;
-            align-items: center;
-            justify-content: center;
+            /*align-items: center;
+            justify-content: center;*/
             height: 100vh;
-        }
-        .tasks-container {
-            width: 80%;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         .section {
             margin-bottom: 20px;
@@ -41,12 +32,7 @@
             border-radius: 5px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
         }
-        .back-button {
-            position: fixed;
-            top: 10px;
-            right: 10px;
-            z-index: 10; /* Ensure the button is on top of other elements */
-        }
+
     </style>
     <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
 </head>
@@ -64,8 +50,8 @@
                 {% endfor %}
             </ul>
         </div>
+        <button class="task-button" onclick="window.location.href='{{ url_for('nextpage') }}';">Dashboard</button>
     </div>
-    <button class="back-button" onclick="history.back()">Go Back</button>
 
     <script>
         document.querySelectorAll('input[type="checkbox"]').forEach(item => {
