--- a/Flask/Static/idex.css
+++ b/Flask/Static/idex.css
@@ -30,6 +30,7 @@ body{
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     justify-content: space-between;
+    display: flex;
 }
 .section ul li:hover {
     background-color: #f0f0f0;
