--- a/Flask/Templates/dashboard.html
+++ b/Flask/Templates/dashboard.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel ="stylesheet" href="{{ url_for('static', filename='idex.css') }}">
-    <link rel ="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='idex.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="{{ url_for('static', filename='idex.js') }}" defer></script>
     <title>Dashboard</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
@@ -48,7 +48,7 @@
                             data-start-time="{{ task['timeOfTaskStart'] }}"
                             data-end-date="{{ task['dateOfTaskEnd'] }}"
                             data-end-time="{{ task['timeOfTaskEnd'] }}"
-                            data-dedicated-to="{{ task['dedicatedTo'] }}"
+                            data-dedicated-to="{{ task['assigned_users'] }}"
                             data-description="{{ task['descript'] }}">
                             <input type="checkbox" id="task{{ task['TID'] }}" name="task{{ task['TID'] }}" value="{{ task['TID'] }}" {% if task['completed'] %} checked {% endif %} onclick="completeTask({{ task['TID'] }})">
                             <label for="task{{ task['TID'] }}">{{ task['task'] }}</label>
@@ -64,7 +64,7 @@
                 <p><strong>Start Time:</strong> <span id="details-start-time"></span></p>
                 <p><strong>End Date:</strong> <span id="details-end-date"></span></p>
                 <p><strong>End Time:</strong> <span id="details-end-time"></span></p>
-                <!--<p><strong>Assigned To:</strong> <span id="details-dedicated-to"></span></p>-->
+                <p><strong>Assigned To:</strong> <span id="details-dedicated-to"></span></p>
                 <p><strong>Description:</strong> <span id="details-description"></span></p>
             </div>
         </div>
