--- a/Flask/Templates/dashboard.html
+++ b/Flask/Templates/dashboard.html
@@ -13,9 +13,7 @@
     <header>
         <div class="container">
             <div id="brand">
-                <h1>
-                    Taskify!
-                </h1>
+                <h1>Taskify!</h1>
             </div>
             <nav>
                 <ul>
@@ -35,42 +33,40 @@
             </nav>
         </div>
     </header>
-    <main>
-        <div class="task-container">
-            <h1>Hello {{ first_name }}!</h1>
-            <div class="section">
-                <h3>Your Tasks</h3>
-                <ul id="tasks-list">
-                    {% for task in tasks %}
-                        <li class="task-item"
-                            data-task="{{ task['task'] }}"
-                            data-start-date="{{ task['dateOfTaskStart'] }}"
-                            data-start-time="{{ task['timeOfTaskStart'] }}"
-                            data-end-date="{{ task['dateOfTaskEnd'] }}"
-                            data-end-time="{{ task['timeOfTaskEnd'] }}"
-                            data-dedicated-to="{{ task['assigned_users'] }}"
-                            data-description="{{ task['descript'] }}">
-                            <input type="checkbox" id="task{{ task['TID'] }}" name="task{{ task['TID'] }}" value="{{ task['TID'] }}" {% if task['completed'] %} checked {% endif %} onclick="completeTask({{ task['TID'] }})">
-                            <label for="task{{ task['TID'] }}">{{ task['task'] }}</label>
-                            <button class="delete-button" onclick="deleteTask({{ task['TID'] }})">✖</button>
-                        </li>
-                    {% endfor %}
-                </ul>
-            </div>
-            <div class="task-details" id="task-details">
-                <h2>Task Details</h2>
-                <p><strong>Task:</strong> <span id="details-task"></span></p>
-                <p><strong>Start Date:</strong> <span id="details-start-date"></span></p>
-                <p><strong>Start Time:</strong> <span id="details-start-time"></span></p>
-                <p><strong>End Date:</strong> <span id="details-end-date"></span></p>
-                <p><strong>End Time:</strong> <span id="details-end-time"></span></p>
-                <p><strong>Assigned To:</strong> <span id="details-dedicated-to"></span></p>
-                <p><strong>Description:</strong> <span id="details-description"></span></p>
-            </div>
+    <div class="task-container">
+        <h1>My Tasks</h1>
+        <div class="section">
+            <h3>Tasks</h3>
+            <ul id="tasks-list">
+                {% for task in tasks %}
+                    <li class="task-item"
+                        data-task="{{ task['task'] }}"
+                        data-start-date="{{ task['dateOfTaskStart'] }}"
+                        data-start-time="{{ task['timeOfTaskStart'] }}"
+                        data-end-date="{{ task['dateOfTaskEnd'] }}"
+                        data-end-time="{{ task['timeOfTaskEnd'] }}"
+                        data-dedicated-to="{{ task['assigned_users'] }}"
+                        data-description="{{ task['descript'] }}">
+                        <input type="checkbox" id="task{{ task['TID'] }}" name="task{{ task['TID'] }}" value="{{ task['TID'] }}">
+                        <label for="task{{ task['TID'] }}">{{ task['task'] }}</label>
+                        <button class="delete-button" onclick="deleteTask({{ task['TID'] }})">✖</button>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+        <div class="task-details" id="task-details">
+            <h2>Task Details</h2>
+            <p><strong>Task:</strong> <span id="details-task"></span></p>
+            <p><strong>Start Date:</strong> <span id="details-start-date"></span></p>
+            <p><strong>Start Time:</strong> <span id="details-start-time"></span></p>
+            <p><strong>End Date:</strong> <span id="details-end-date"></span></p>
+            <p><strong>End Time:</strong> <span id="details-end-time"></span></p>
+            <p><strong>Assigned To:</strong> <span id="details-dedicated-to"></span></p>
+            <p><strong>Description:</strong> <span id="details-description"></span></p>
         </div>
         <a href="{{ url_for('discussion_board') }}" id="fixed-round-button">
             <img src="{{ url_for('static', filename='images/chat.png') }}" alt="Button Image">
         </a>
-    </main>
+    </div>
 </body>
 </html>
